// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders form with email and password fields 1`] = `
<div
  className="container"
>
  <div
    className="row justify-content-center"
  >
    <div
      className="col-md-12 col-lg-8 col-xl-6"
    >
      <form
        className="login-form"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <a
            className="btn btn-primary btn-google btn-lg btn-block"
            href="/auth/google"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Google
            </span>
          </a>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="email"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Email
            </span>
          </label>
          <input
            className="form-control"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            type="email"
            value=""
          />
          <span
            className="error-message"
          />
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="password"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Password
            </span>
          </label>
          <input
            className="form-control"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <p>
          <a
            href="/password/forgotten"
            onClick={[Function]}
          >
            <span
              className={undefined}
              style={undefined}
            >
              Forgot
            </span>
          </a>
        </p>
        <div
          className="form-group"
        >
          <button
            className="btn btn-outline-success btn-lg btn-block"
            onClick={[Function]}
          >
            <span
              className={undefined}
              style={undefined}
            >
              Save
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Login renders form with error message 1`] = `
<div
  className="container"
>
  <div
    className="row justify-content-center"
  >
    <div
      className="col-md-12 col-lg-8 col-xl-6"
    >
      <form
        className="login-form"
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <a
            className="btn btn-primary btn-google btn-lg btn-block"
            href="/auth/google"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Google
            </span>
          </a>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="email"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Email
            </span>
          </label>
          <input
            className="form-control"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            type="email"
            value=""
          />
          <span
            className="error-message"
          >
            Some error message. Auth failed.
          </span>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="password"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Password
            </span>
          </label>
          <input
            className="form-control"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <p>
          <a
            href="/password/forgotten"
            onClick={[Function]}
          >
            <span
              className={undefined}
              style={undefined}
            >
              Forgot
            </span>
          </a>
        </p>
        <div
          className="form-group"
        >
          <button
            className="btn btn-outline-success btn-lg btn-block"
            onClick={[Function]}
          >
            <span
              className={undefined}
              style={undefined}
            >
              Save
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
